--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "react-toolbox": "^1.3.1",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^0.9.0",
-    "redux-form": "^6.2.1",
+    "redux-form": "^6.5.0",
     "redux-thunk": "^2.1.0",
     "resolve-url-loader": "^1.6.1",
     "rethink-migrate": "^1.3.1",
@@ -152,6 +152,7 @@
     "tmp": "0.0.31",
     "toureiro": "^0.2.12",
     "url-loader": "^0.5.7",
+    "validate.js": "^0.11.1",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-fail-plugin": "^1.0.5",
@@ -172,7 +173,7 @@
     "factory-girl": "^3.0.1",
     "faker": "^3.1.0",
     "jsdom": "^8.0.2",
-    "mocha": "^2.4.5",
+    "mocha": "^3.2.0",
     "nock": "^8.0.0",
     "nyc": "^7.1.0",
     "pre-commit": "^1.1.3",
