Adding logic to update player stats on project close
* Ignoring old project reviews in stats
* Removing unused function in surveyService
* Calling closeProject from updateProjectStates to do the closing
* Fixing minor bug in the tests for updateProjectStates that caused the questions refs to be invalid in the test data
* Adding script to re-close all projects in order in order to recalc stats
* Remove unused util method
* Remove notes file
* Add clubhouse URL to PULL_REQUEST_TEMPLATE
* Adding closedAt migration
* Adding review accuracy and external review count to the UI
* Removing deprecated logic for calculating project completeness and quality.
* Adding id as a tooltip to the UserDetail/ContentSidebar for debugging.
* Falling back to accuracy and id comparisons when rxp is equal.
* Adding reviewStats baseline

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "queue:empty": "npm run symlinks && ./node_modules/.bin/babel-node scripts/queueEmpty.js",
     "start": "npm run symlinks && npm run icons:fetch && node server",
     "stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
+    "stats:review": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runReviewStats",
+    "stats:all": "npm run stats && npm run stats:review",
     "symlinks": "./node_modules/.bin/babel-node ./scripts/createSymlinks",
     "symlinks:remove": "./node_modules/.bin/rimraf ./node_modules/src",
     "test": "npm run symlinks && npm run lint && npm run test:run --",
