--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "print:survey": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printSurveyQuestions",
     "queue:empty": "npm run symlinks && ./node_modules/.bin/babel-node scripts/queueEmpty.js",
     "start": "npm run symlinks && npm run icons:fetch && node server",
-    "stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
+    "stats:retro": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
     "stats:review": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runReviewStats",
-    "stats:all": "npm run stats && npm run stats:review",
+    "stats": "npm run stats:retro && npm run stats:review",
     "symlinks": "./node_modules/.bin/babel-node ./scripts/createSymlinks",
     "symlinks:remove": "./node_modules/.bin/rimraf ./node_modules/src",
     "test": "npm run symlinks && npm run lint && npm run test:run --",
