--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["es2015", "stage-2", "react"],
   "plugins": [
     "add-module-exports",
+    ["transform-builtin-extend", {"globals": ["Error"]}]
   ],
   "env": {
     "test": {
