--- a/db/data/surveyBlueprints.yaml
+++ b/db/data/surveyBlueprints.yaml
@@ -34,6 +34,10 @@
       questionId: bbace690-b4c6-435f-a2f8-23bf95c97754
     -
       questionId: 09dff295-c339-4326-8e21-71cf332e0895
+    -
+      questionId: 767609ac-3e92-4c57-9d58-8e211891eec1
+    -
+      questionId: ac3c2fa4-3baa-4343-8bc9-490202006adc
 -
   id: 106c8683-4936-4c9b-b874-a70cfdd8ce20
   descriptor: projectReview
