--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "express-sslify": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "form-urlencoded": "^1.5.0",
     "google-libphonenumber": "^2.0.6",
     "graphql": "^0.4.18",
     "graphql-custom-types": "^0.3.0",
