--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.3",
     "newrelic": "^1.28.2",
+    "nock": "https://registry.npmjs.org/nock/-/nock-8.2.1.tgz",
     "node-sass": "^3.13.0",
     "normalize.css": "^5.0.0",
     "normalizr": "^2.3.0",
