--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
         2
       ],
       "unicorn/filename-case": 0,
+      "unicorn/no-abusive-eslint-disable": 0,
       "xo/catch-error-name": 0,
       "xo/filename-case": 0
     },
