--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "addProjectFormationCompleteEvent": "npm run symlinks && ./node_modules/.bin/babel-node scripts/addProjectFormationCompleteEvent",
     "build": "npm run symlinks && mkdir -p dist && webpack --config config/webpack.js",
     "closeProject": "npm run symlinks && ./node_modules/.bin/babel-node scripts/closeProject.js",
+    "updatePlayerStatsForProject": "npm run symlinks && ./node_modules/.bin/babel-node scripts/updatePlayerStatsForProject.js",
     "data:github-goals": "npm run symlinks && ./node_modules/.bin/babel-node test/generateTestGoals",
     "data:import:survey-questions": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyQuestions",
     "data:import:survey-responses": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyResponses",
@@ -39,9 +40,7 @@
     "print:survey": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printSurveyQuestions",
     "queue:empty": "npm run symlinks && ./node_modules/.bin/babel-node scripts/queueEmpty.js",
     "start": "npm run symlinks && npm run icons:fetch && node server",
-    "stats:retro": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
-    "stats:review": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runReviewStats",
-    "stats": "npm run stats:retro && npm run stats:review",
+    "stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
     "symlinks": "./node_modules/.bin/babel-node ./scripts/createSymlinks",
     "symlinks:remove": "./node_modules/.bin/rimraf ./node_modules/src",
     "test": "npm run symlinks && npm run lint && npm run test:run --",
