--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.4",
     "bull": "^1.0.0-rc1",
+    "cache-manager": "^2.4.0",
     "chokidar": "^1.4.3",
     "config": "^1.21.0",
     "cookie-parser": "^1.4.1",
