--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "data:reloadFromFiles": "npm run symlinks && ./node_modules/.bin/babel-node scripts/reloadDataFiles",
     "db:create": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbCreate.js",
     "db:drop": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbDrop.js",
-    "db:migrate": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db",
-    "db:migrate:configure": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbConfig.js",
-    "db:migrate:create": "./node_modules/.bin/rethink-migrate create -r db",
-    "db:migrate:down": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db down",
-    "db:migrate:up": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db up",
+    "db:migrate": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate",
+    "db:migrate:create": "./node_modules/.bin/rethinkdb-migrate create -f config/db.js",
+    "db:migrate:down": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate down",
+    "db:migrate:up": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate up",
     "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate:up",
     "icons:fetch": "mkdir -p dist && curl -s https://brand.learnersguild.org/icontags > dist/icons-metadata.json",
     "import:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importProjects.js",
@@ -133,9 +132,9 @@
     "postcss-modules-values": "^1.2.2",
     "raven": "^0.10.0",
     "raven-js": "^2.1.1",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "~15.4.2",
+    "react-addons-css-transition-group": "~15.4.2",
+    "react-dom": "~15.4.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
@@ -145,9 +144,9 @@
     "redux-form": "^6.5.0",
     "redux-thunk": "^2.1.0",
     "resolve-url-loader": "^1.6.1",
-    "rethink-migrate": "^1.3.1",
     "rethinkdb": "2.3.3",
     "rethinkdb-changefeed-reconnect": "^0.3.1",
+    "rethinkdb-migrate": "^1.1.0",
     "rethinkdbdash": "2.3.27",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
@@ -185,7 +184,7 @@
     "nock": "^8.0.0",
     "nyc": "^7.1.0",
     "pre-commit": "^1.1.3",
-    "react-addons-test-utils": "^15.4.2",
+    "react-addons-test-utils": "~15.4.2",
     "react-transform-hmr": "^1.0.4",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
