add compression package to gzip server responses

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "bull": "^1.0.0-rc1",
     "cache-manager": "^2.4.0",
     "chokidar": "^1.4.3",
+    "compression": "^1.6.2",
     "config": "^1.21.0",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
