remove refs to deleted `db:migrate:configure` script

--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "data:reloadFromFiles": "npm run symlinks && ./node_modules/.bin/babel-node scripts/reloadDataFiles",
     "db:create": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbCreate.js",
     "db:drop": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbDrop.js",
-    "db:migrate": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate",
+    "db:migrate": "npm run symlinks && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate",
     "db:migrate:create": "./node_modules/.bin/rethinkdb-migrate create -f config/db.js",
-    "db:migrate:down": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate down",
-    "db:migrate:up": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate up",
+    "db:migrate:down": "npm run symlinks && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate down",
+    "db:migrate:up": "npm run symlinks && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate up",
     "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate:up",
     "icons:fetch": "mkdir -p dist && curl -s https://brand.learnersguild.org/icontags > dist/icons-metadata.json",
     "import:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importProjects.js",
