--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
   "scripts": {
     "addProjectFormationCompleteEvent": "npm run symlinks && ./node_modules/.bin/babel-node scripts/addProjectFormationCompleteEvent",
     "build": "npm run symlinks && mkdir -p dist && webpack --config config/webpack.js",
-    "closeProject": "npm run symlinks && ./node_modules/.bin/babel-node scripts/closeProject.js",
+    "closeProject": "npm run symlinks && ./node_modules/.bin/babel-node scripts/closeProject",
     "data:github-goals": "npm run symlinks && ./node_modules/.bin/babel-node test/generateTestGoals",
     "data:import:survey-questions": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyQuestions",
     "data:import:survey-responses": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyResponses",
     "data:reloadFromFiles": "npm run symlinks && ./node_modules/.bin/babel-node scripts/reloadDataFiles",
-    "db:create": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbCreate.js",
-    "db:drop": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbDrop.js",
-    "db:migrate": "npm run symlinks && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate",
-    "db:migrate:create": "./node_modules/.bin/rethinkdb-migrate create -f config/db.js",
-    "db:migrate:down": "npm run symlinks && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate down",
-    "db:migrate:up": "npm run symlinks && ./node_modules/.bin/babel-node ./node_modules/.bin/rethinkdb-migrate up",
+    "db:create": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbCreate",
+    "db:drop": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbDrop",
+    "db:migrate": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbConfig && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r data",
+    "db:migrate:create": "npm run db:migrate -- create",
+    "db:migrate:down": "npm run db:migrate -- down",
+    "db:migrate:up": "npm run db:migrate -- up",
     "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate:up",
     "icons:fetch": "mkdir -p dist && curl -s https://brand.learnersguild.org/icontags > dist/icons-metadata.json",
-    "import:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importProjects.js",
+    "import:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importProjects",
     "lint": "./node_modules/.bin/xo",
     "postinstall": "npm run build",
     "players:collaboration": "npm run symlinks && ./node_modules/.bin/babel-node scripts/ensurePlayersCanCollaborate",
@@ -36,7 +36,7 @@
     "print:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printProjects",
     "print:stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printStats",
     "print:survey": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printSurveyQuestions",
-    "queue:empty": "npm run symlinks && ./node_modules/.bin/babel-node scripts/queueEmpty.js",
+    "queue:empty": "npm run symlinks && ./node_modules/.bin/babel-node scripts/queueEmpty",
     "start": "npm run symlinks && npm run icons:fetch && node server",
     "stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
     "symlinks": "./node_modules/.bin/babel-node ./scripts/createSymlinks",
@@ -74,7 +74,7 @@
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.20.0",
     "basic-auth": "^1.0.4",
     "bluebird": "^3.3.5",
@@ -143,10 +143,11 @@
     "redux-auth-wrapper": "^0.9.0",
     "redux-form": "^6.5.0",
     "redux-thunk": "^2.1.0",
+    "require-yaml": "0.0.1",
     "resolve-url-loader": "^1.6.1",
+    "rethink-migrate": "^1.3.1",
     "rethinkdb": "2.3.3",
     "rethinkdb-changefeed-reconnect": "^0.3.1",
-    "rethinkdb-migrate": "^1.1.0",
     "rethinkdbdash": "2.3.27",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
