add `hasVoting` and `hasRetrospective` props to Phase model

--- a/data/phases.yaml
+++ b/data/phases.yaml
@@ -12,15 +12,25 @@
 -
   id: ac13b0b8-0dc3-44ae-8bb6-0894fd06f0ca
   number: 1
+  hasVoting: false
+  hasRetrospective: false
 -
   id: e9548492-6106-4b06-bb54-a42d9479efb1
   number: 2
+  hasVoting: false
+  hasRetrospective: false
 -
   id: 80c22650-b0e4-4223-a073-fa0004e8785d
   number: 3
+  hasVoting: true
+  hasRetrospective: true
 -
   id: ab4e7c93-1ce3-4c15-81a4-69f92e23854f
   number: 4
+  hasVoting: false
+  hasRetrospective: true
 -
   id: 44222a6b-97de-42e8-9e11-f3427e975420
   number: 5
+  hasVoting: false
+  hasRetrospective: false
