add goal props to Phase model; auto-create projects for no-vote phases

--- a/data/phases.yaml
+++ b/data/phases.yaml
@@ -14,23 +14,30 @@
   number: 1
   hasVoting: false
   hasRetrospective: false
+  practiceGoalNumber: 412
+  interviewGoalNumber: 416
 -
   id: e9548492-6106-4b06-bb54-a42d9479efb1
   number: 2
   hasVoting: false
   hasRetrospective: false
+  practiceGoalNumber: 413
+  interviewGoalNumber: 417
 -
   id: 80c22650-b0e4-4223-a073-fa0004e8785d
   number: 3
   hasVoting: true
   hasRetrospective: true
+  interviewGoalNumber: 418
 -
   id: ab4e7c93-1ce3-4c15-81a4-69f92e23854f
   number: 4
   hasVoting: false
   hasRetrospective: true
+  practiceGoalNumber: 414
 -
   id: 44222a6b-97de-42e8-9e11-f3427e975420
   number: 5
   hasVoting: false
   hasRetrospective: false
+  practiceGoalNumber: 415
