--- a/data/phases.yaml
+++ b/data/phases.yaml
@@ -12,6 +12,7 @@
 -
   id: ac13b0b8-0dc3-44ae-8bb6-0894fd06f0ca
   number: 1
+  channelName: phase-1
   hasVoting: false
   hasRetrospective: false
   practiceGoalNumber: 412
@@ -19,6 +20,7 @@
 -
   id: e9548492-6106-4b06-bb54-a42d9479efb1
   number: 2
+  channelName: phase-2
   hasVoting: false
   hasRetrospective: false
   practiceGoalNumber: 413
@@ -26,18 +28,21 @@
 -
   id: 80c22650-b0e4-4223-a073-fa0004e8785d
   number: 3
+  channelName: phase-3
   hasVoting: true
   hasRetrospective: true
   interviewGoalNumber: 418
 -
   id: ab4e7c93-1ce3-4c15-81a4-69f92e23854f
   number: 4
+  channelName: phase-4
   hasVoting: false
   hasRetrospective: true
   practiceGoalNumber: 414
 -
   id: 44222a6b-97de-42e8-9e11-f3427e975420
   number: 5
+  channelName: phase-5
   hasVoting: false
   hasRetrospective: false
   practiceGoalNumber: 415
