--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "react": "~15.4.2",
     "react-addons-css-transition-group": "~15.4.2",
     "react-dom": "~15.4.2",
+    "react-helmet": "^5.1.3",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
