--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "addProjectFormationCompleteEvent": "npm run symlinks && ./node_modules/.bin/babel-node scripts/addProjectFormationCompleteEvent",
     "build": "npm run symlinks && mkdir -p dist && webpack --config config/webpack.js",
+    "clone:artifacts": "npm run symlinks && ./node_modules/.bin/babel-node scripts/cloneArtifacts",
     "data:github-goals": "npm run symlinks && ./node_modules/.bin/babel-node test/generateTestGoals",
     "data:import:survey-questions": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyQuestions",
     "data:import:survey-responses": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyResponses",
@@ -94,6 +95,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "form-urlencoded": "^1.5.0",
+    "git-clone": "^0.1.0",
     "google-libphonenumber": "^2.0.6",
     "graphql": "^0.4.18",
     "graphql-custom-types": "^0.3.0",
