add db copy script

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "data:import:survey-questions": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyQuestions",
     "data:import:survey-responses": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyResponses",
     "data:reloadFromFiles": "npm run symlinks && ./node_modules/.bin/babel-node scripts/reloadDataFiles",
+    "db:copy": "npm run db:drop && ./node_modules/.bin/babel-node scripts/dbCopy",
     "db:create": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbCreate",
     "db:drop": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbDrop",
     "db:migrate": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbConfig && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r data",
@@ -157,6 +158,7 @@
     "rethinkdb-changefeed-reconnect": "^0.3.1",
     "rethinkdbdash": "2.3.27",
     "rimraf": "^2.5.4",
+    "s3": "^4.4.0",
     "sass-loader": "^4.0.2",
     "sass-resources-loader": "^1.1.0",
     "serve-static": "^1.10.0",
